Batch 27: DuckDB logging context